--- a/templates/nginx/webapp.conf.template
+++ b/templates/nginx/webapp.conf.template
@@ -19,6 +19,7 @@ server {
     
     server_name dev.${BASE_DOMAIN_NAME} cf.${BASE_DOMAIN_NAME} ${BASE_DOMAIN_NAME} www.${BASE_DOMAIN_NAME};
 
+{{if .SSL.Enabled}}
     if ($host = $redirect_to_base_domain) {
         return 301 https://${BASE_DOMAIN_NAME}$request_uri;
     }
@@ -31,8 +32,33 @@ server {
     # location /.well-known/acme-challenge/ {
     #     root /var/www/certbot;
     # }
+{{else}}
+    if ($host = $redirect_to_base_domain) {
+        return 301 http://${BASE_DOMAIN_NAME}$request_uri;
+    }
+
+    location / {
+        limit_req zone=one burst=5;
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /static {
+        alias /data/static;
+    }
+
+    location /favicon.ico {
+        alias /data/static/favicon.ico;
+    }
+
+    location /robots.txt {
+        alias /data/static/robots.txt;
+    }
+{{end}}
 }
 
+{{if .SSL.Enabled}}
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -40,11 +66,9 @@ server {
     
     server_name dev.${BASE_DOMAIN_NAME} cf.${BASE_DOMAIN_NAME} ${BASE_DOMAIN_NAME} www.${BASE_DOMAIN_NAME};
 
-    ssl_certificate /etc/letsencrypt/live/${BASE_DOMAIN_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${BASE_DOMAIN_NAME}/privkey.pem;
+    ssl_certificate /etc/ssl/certs/server.crt;
+    ssl_certificate_key /etc/ssl/private/server.key;
 
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-    
     # intermediate configuration
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
@@ -52,9 +76,6 @@ server {
 
     # HSTS (ngx_http_headers_module is required) (63072000 seconds)
     add_header Strict-Transport-Security "max-age=63072000" always;
-    
-    # DH parameters for production (uncomment when using Let's Encrypt)
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host = $redirect_to_base_domain) {
         return 301 https://${BASE_DOMAIN_NAME}$request_uri;
@@ -79,4 +100,5 @@ server {
         alias /data/static/robots.txt;
     }
 }
+{{end}}
 
