fix: bakend validations

--- a/templates/redis/redis.conf
+++ b/templates/redis/redis.conf
@@ -338,7 +338,7 @@ daemonize no
 #
 # Note that on modern Linux systems "/run/redis.pid" is more conforming
 # and should be used instead.
-pidfile /var/run/redis_6379.pid
+pidfile /data/redis_6379.pid
 
 # Specify the server verbosity level.
 # This can be one of:
