--- a/templates/nginx/webapp.conf.template
+++ b/templates/nginx/webapp.conf.template
@@ -48,6 +48,10 @@ server {
         alias /data/static;
     }
 
+    location /manage_static {
+        alias /data/manage_static;
+    }
+
     location /favicon.ico {
         alias /data/static/favicon.ico;
     }
@@ -90,6 +94,10 @@ server {
 
     location /static {
         alias /data/static;
+    }
+
+    location /manage_static {
+        alias /data/manage_static;
     }
 
     location /favicon.ico {
