--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "frontend"]
 	path = frontend
-	url = git@github.com:biliqiqi/baklab-web.git
+	url = https://github.com/biliqiqi/baklab-web.git
