--- a/templates/nginx/nginx.conf
+++ b/templates/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     server_names_hash_bucket_size 128; # this seems to be required for some vhosts
     limit_req_zone $binary_remote_addr zone=one:10m rate=60r/s;
 
-    include /etc/nginx/conf.d/webapp.conf;
+    include /etc/nginx/conf.d/baklab.conf;
 
     # server { # php/fastcgi
     #   listen       80;
