--- a/templates/nginx/nginx.conf
+++ b/templates/nginx/nginx.conf
@@ -24,6 +24,17 @@ http {
     server_names_hash_bucket_size 128; # this seems to be required for some vhosts
     limit_req_zone $binary_remote_addr zone=one:10m rate=60r/s;
 
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript
+               application/json application/javascript application/xml+rss
+               application/atom+xml image/svg+xml text/x-component
+               application/wasm application/manifest+json;
+    gzip_min_length 1000;
+    gzip_disable "msie6";
+
     include /etc/nginx/conf.d/baklab.conf;
 
     # server { # php/fastcgi
