chore: posrgres command update

--- a/templates/db/postgresql.conf
+++ b/templates/db/postgresql.conf
@@ -1,1 +1,7 @@
 listen_addresses = '*'
+
+log_statement = all
+log_destination = 'stderr'
+
+shared_preload_libraries = 'pg_cron'
+cron.database_name = 'postgres'
