--- a/static/package.json
+++ b/static/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "build": "node build.js",
+    "watch": "node build.js --watch",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
+    "esbuild": "^0.19.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
