--- a/templates/nginx/baklab.conf.template
+++ b/templates/nginx/baklab.conf.template
@@ -6,24 +6,55 @@ upstream backend{
 
 # base on https://ssl-config.mozilla.org/#server=nginx&version=1.25.2&config=intermediate&openssl=3.0.9&guideline=5.7
 
-map $host $redirect_to_base_domain {
-    default 0;
-    www.${ROOT_DOMAIN_NAME} 1;
-    "~^\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$" 1;
-    "~^[0-9a-fA-F:]+$" 1;
-}
-
+# Catch-all server block to reject requests with invalid Host header
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    
-    server_name ${ROOT_DOMAIN_NAME} www.${ROOT_DOMAIN_NAME};
+    server_name _;
+    return 403;
+}
 
 {{if .SSL.Enabled}}
-    if ($host = $redirect_to_base_domain) {
-        return 301 https://${ROOT_DOMAIN_NAME}$request_uri;
-    }
+server {
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
+    server_name _;
+    ssl_certificate /etc/ssl/certs/server.crt;
+    ssl_certificate_key /etc/ssl/private/server.key;
+    ssl_reject_handshake on;
+}
+{{end}}
 
+# Redirect www to non-www
+server {
+    listen 80;
+    listen [::]:80;
+    server_name www.${ROOT_DOMAIN_NAME};
+{{if .SSL.Enabled}}
+    return 301 https://${ROOT_DOMAIN_NAME}$request_uri;
+{{else}}
+    return 301 http://${ROOT_DOMAIN_NAME}$request_uri;
+{{end}}
+}
+
+{{if .SSL.Enabled}}
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name www.${ROOT_DOMAIN_NAME};
+    ssl_certificate /etc/ssl/certs/server.crt;
+    ssl_certificate_key /etc/ssl/private/server.key;
+    return 301 https://${ROOT_DOMAIN_NAME}$request_uri;
+}
+{{end}}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name ${ROOT_DOMAIN_NAME};
+
+{{if .SSL.Enabled}}
     location / {
         limit_req zone=one burst=20 nodelay;
         return 301 https://$host$request_uri;
@@ -33,10 +64,6 @@ server {
     #     root /var/www/certbot;
     # }
 {{else}}
-    if ($host = $redirect_to_base_domain) {
-        return 301 http://${ROOT_DOMAIN_NAME}$request_uri;
-    }
-
     location / {
         limit_req zone=one burst=20 nodelay;
         proxy_pass http://backend;
@@ -79,8 +106,8 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
-    
-    server_name ${ROOT_DOMAIN_NAME} www.${ROOT_DOMAIN_NAME};
+
+    server_name ${ROOT_DOMAIN_NAME};
 
     ssl_certificate /etc/ssl/certs/server.crt;
     ssl_certificate_key /etc/ssl/private/server.key;
@@ -92,10 +119,6 @@ server {
 
     # HSTS (ngx_http_headers_module is required) (63072000 seconds)
     add_header Strict-Transport-Security "max-age=63072000" always;
-
-    if ($host = $redirect_to_base_domain) {
-        return 301 https://${ROOT_DOMAIN_NAME}$request_uri;
-    }
 
     # Special handling for SSE events endpoint
     location /api/events {
