--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ setup
 
 # Generated configuration files directory (regenerated on each run)
 output/
+output*/
 
 # Runtime data and state files
 data/*.json
