--- a/templates/nginx/baklab.conf.template
+++ b/templates/nginx/baklab.conf.template
@@ -81,20 +81,7 @@ server {
         return 200 "ok";
     }
 
-    # Dali service proxy - only when RANKING_HOST_NAME is set
-    if ($host = ${RANKING_HOST_NAME}) {
-        set $dali_proxy 1;
-    }
-
     location / {
-        if ($dali_proxy = 1) {
-            proxy_pass http://dali:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            break;
-        }
         limit_req zone=one burst=20 nodelay;
         proxy_pass http://backend;
         proxy_set_header Host $host;
@@ -217,20 +204,7 @@ server {
         add_header Service-Worker-Allowed "/";
     }
 
-    # Dali service proxy - only when RANKING_HOST_NAME is set
-    if ($host = ${RANKING_HOST_NAME}) {
-        set $dali_proxy 1;
-    }
-
     location / {
-        if ($dali_proxy = 1) {
-            proxy_pass http://dali:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            break;
-        }
         limit_req zone=one burst=20 nodelay;
         proxy_pass http://backend;
         proxy_set_header Host $host;
@@ -239,4 +213,47 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+# Dali service - only when RANKING_HOST_NAME is set
+server {
+    listen 80;
+    listen [::]:80;
+    server_name ${RANKING_HOST_NAME};
+
+    location / {
+        proxy_pass http://dali:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+{{if .SSL.Enabled}}
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name ${RANKING_HOST_NAME};
+
+    ssl_certificate /etc/ssl/certs/server.crt;
+    ssl_certificate_key /etc/ssl/private/server.key;
+
+    # intermediate configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
+    ssl_prefer_server_ciphers off;
+
+    # HSTS (ngx_http_headers_module is required) (63072000 seconds)
+    add_header Strict-Transport-Security "max-age=63072000" always;
+
+    location / {
+        proxy_pass http://dali:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+{{end}}
 {{end}}
