--- a/templates/nginx/baklab.conf.template
+++ b/templates/nginx/baklab.conf.template
@@ -57,7 +57,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name ${ROOT_DOMAIN_NAME};
+    server_name ${SERVER_DOMAIN_NAME};
 
 {{if .SSL.Enabled}}
     location /health {
@@ -124,7 +124,7 @@ server {
     listen [::]:443 ssl;
     http2 on;
 
-    server_name ${ROOT_DOMAIN_NAME};
+    server_name ${SERVER_DOMAIN_NAME};
 
     ssl_certificate /etc/ssl/certs/server.crt;
     ssl_certificate_key /etc/ssl/private/server.key;
