--- a/templates/caddy/dizkaz.caddy.template
+++ b/templates/caddy/dizkaz.caddy.template
@@ -48,10 +48,12 @@
 		path /api/events*
 	}
 	handle @sse {
-		rewrite * /z/{$DIZKAZ_SITE_PATH}{uri}
 		reverse_proxy app:3000 {
 			header_up Host {host}
 			header_up X-Real-IP {remote_host}
+			header_up X-Forwarded-Uri /z/{$DIZKAZ_SITE_PATH}{uri}
+
+			rewrite /z/{$DIZKAZ_SITE_PATH}{uri}
 
 			flush_interval -1
 
