--- a/templates/caddy/dizkaz.caddy.template
+++ b/templates/caddy/dizkaz.caddy.template
@@ -10,64 +10,72 @@
 		format json
 	}
 
-	@health path /health
-	handle @health {
-		respond "ok" 200
-	}
+	route {
+		forward_auth app:3000 {
+			uri /api/verify
+			header_up Host {http.request.host}
+			header_up X-Forwarded-Host {http.request.host}
+		}
 
-	handle_path /static/* {
-		root * /data/static
-		file_server
-		header Cache-Control "public, immutable, max-age=31536000"
-	}
+		@health path /health
+		handle @health {
+			respond "ok" 200
+		}
 
-	handle /favicon.ico {
-		root * /data/static
-		rewrite * /favicon.ico
-		file_server
-		header Cache-Control "public, immutable, max-age=31536000"
-	}
+		handle_path /static/* {
+			root * /data/static
+			file_server
+			header Cache-Control "public, immutable, max-age=31536000"
+		}
 
-	handle /robots.txt {
-		root * /data/static
-		rewrite * /robots.txt
-		file_server
-		header Cache-Control "public, max-age=604800"
-	}
+		handle /favicon.ico {
+			root * /data/static
+			rewrite * /favicon.ico
+			file_server
+			header Cache-Control "public, immutable, max-age=31536000"
+		}
 
-	handle_path /sw.js {
-		root * /data/static/frontend
-		file_server
-		header Cache-Control "no-cache, no-store, must-revalidate"
-		header Pragma "no-cache"
-		header Expires "0"
-		header Service-Worker-Allowed "/"
-	}
+		handle /robots.txt {
+			root * /data/static
+			rewrite * /robots.txt
+			file_server
+			header Cache-Control "public, max-age=604800"
+		}
 
-	@sse {
-		path /api/events*
-	}
-	handle @sse {
-		reverse_proxy app:3000 {
-			header_up Host {host}
-			header_up X-Real-IP {remote_host}
-			header_up Connection "upgrade"
+		handle_path /sw.js {
+			root * /data/static/frontend
+			file_server
+			header Cache-Control "no-cache, no-store, must-revalidate"
+			header Pragma "no-cache"
+			header Expires "0"
+			header Service-Worker-Allowed "/"
+		}
 
-			flush_interval -1
+		@sse {
+			path /api/events*
+		}
+		handle @sse {
+			reverse_proxy app:3000 {
+				header_up Host {host}
+				header_up X-Real-IP {remote_host}
+				header_up Connection "upgrade"
 
-			transport http {
-				read_timeout 24h
-				write_timeout 24h
-				read_buffer 0
-				write_buffer 0
+				flush_interval -1
+
+				transport http {
+					read_timeout 24h
+					write_timeout 24h
+					read_buffer 0
+					write_buffer 0
+				}
 			}
 		}
-	}
 
-	handle {
-		reverse_proxy app:3000 {
-			header_up Host {host}
-			header_up X-Real-IP {remote_host}
+		handle {
+			reverse_proxy app:3000 {
+				header_up Host {host}
+				header_up X-Real-IP {remote_host}
+			}
 		}
 	}
 }
